# IUM-Projekt

./: README.md  logs.jsonl  pyproject.toml
IUM/: logs.jsonl  main.py  models.py
IUM/data/: divide_dataset_into_training_and_testing_sets.py  get_user_sessions_bought_to_all_sessions_ratio.py  main.py  make_csv_from_jsonl.py  make_dataset.py  prepare_data_to_model.py
IUM/model/: checkpoint  modelDefinition.py  predictPurchase.py
data/processed/: data_to_model.csv  products.csv  products_with_one_hot_encoding.csv  session_ratio_per_user.json  sessions.csv  testing_sessions.csv  testing_set  training_sessions.csv  training_set
data/raw/: deliveries.jsonl  users.jsonl
models/: modelDefinition.py  predictPurchase.py  test_model.py  test_model_weights.h5f.data-00000-of-00001  test_model_weights.h5f.index  train_model.py
notebooks/: IUM_proj_model.ipynb  data-analysis.ipynb  data_analysis.ipynb  prepare_data_to_model.ipynb  processing_products_data.ipynb  processing_sessions_data.ipynb
notebooks/.ipynb_checkpoints/: data-analysis-checkpoint.ipynb
tests/: test_make_dataset.py
