[tool.poetry]
name = "project_name"
version = "0.1.0"
description = ""
authors = [
    "Jan Piotrowski <jan.piotrowski3.stud@pw.edu.pl>",
    "Bartosz Kopeć <bartosz.kopec.stud@pw.edu.pl>"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
ipykernel = "^6.4.1"
jupyter = "^1.0.0"
pytest = "^6.2.5"
seaborn = "^0.11.2"
sklearn = "^0.0"
fastapi = "^0.71.0"
jsonlines = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
